# Epilog

./: .gitignore  Definicion.mdwn  Epilog.cabal  LICENSE  Lexer.hs  Lexer.x  Makefile  README.md  Tokens.hs  local.ep  requirements.md  requisitos.mdwn  sample.ep  tac2mips.md  test.ep  todo.md
doc/: Grammar.txt  design.md  grammar.md  requirements.md
examples/: Epilog.tix  answertest.ep  asttest.ep  casetest.ep  collatz.ep  collatz.ir  easy.ep  easy.ir  ep.ep  fortest.ep  glob.ep  help.ep  lcd.ep  lcd.ir  lcd2.ep  lcd2.ir  lista.ep  parser.ep  sample.ep  test.ep  test.ir  typetest.ep
src/: Epilog.cabal  prueba.hs  todo.md
src/.hpc/: Language.Epilog.Context.mix  Language.Epilog.Lexer.mix  Language.Epilog.Parser.mix  Main.mix
src/Bash/: runepilog
src/Haskell/: Epilog.cabal  LICENSE  mips1.asm  out.asm
src/Haskell/Language/Epilog/: Common.hs  Context.hs  Epilog.hs  Error.hs  Joy.hs  Lexer.x  Main.hs  Parser.y  Token.hs  Treelike.hs  Type.hs
src/Haskell/Language/Epilog/AST/: Expression.hs  Instruction.hs  Procedure.hs  Program.hs
src/Haskell/Language/Epilog/IR/: Expression.hs  Instruction.hs  Monad.hs  Procedure.hs  Program.hs  TAC.hs  Test.hs
src/Haskell/Language/Epilog/MIPS/: Gmips.hs  MIPS.hs  Monad.hs  Program.hs
src/Language/Epilog/: At.hs  Classes.hs  Common.hs  Context.hs  Context.hs.bak  Epilog.hs  Error.hs  Expression.hs  Instruction.hs  Joy.hs  Lexeme.hs  Lexer.hs  Lexer.x  Main.hs  Parser.hs  Parser.y  Position.hs  STTester.hs  SymbolTable.hs  TAC.hs  Token.hs  Treelike.hs  Type.hs  Unsafe.hs  grammar
src/Language/Epilog/AST/: AST.hs  AST.hs.bak  Expression.hs  Instruction.hs  Procedure.hs  Program.hs  Program.hs.bak  Type.hs
src/Language/Epilog/IR/: Expression.hs  Instruction.hs  Monad.hs  Procedure.hs  Program.hs  TAC.hs
src/Language/Haskell/: Epilog.cabal
src/Language/Haskell/Epilog/: Context.hs  Main.hs  Type.hs
src/Language/Haskell/Epilog/IR/: Program.hs
src/MIPS/: memory.asm  shared.asm
testset/: 1factorial.asm  1factorial.ep  2heron.asm  2heron.ep  2heronplus.asm  2heronplus.ep  3statistics.asm  3statistics.ep  4altperoles.asm  4altperoles.ep  4peroles.asm  4peroles.ep  5quicksort.asm  5quicksort.ep  6gauss.asm  6gauss.ep  6gaussGOOD.asm  7evenodd.asm  7evenodd.ep  8searchtree.ep  9calc.ep  alpha
testset/C/: 1factorial.c  2heron.c  3statistics.c  4peroles.c  5quicksort.c  6gauss.c  7evenodd.c  (+2 more)
