name:                Epilog
version:             0.1.0.0
synopsis:            Epilog programming language compiler
description:         Epilog is a general purpose programming language
  developed for the elective courses on Programming Languages at Universidad
  Simón Bolívar. It is inspired, in part, by the syntax of programming
  languages Prolog and Erlang.
homepage:            github.com/adgalad/Epilog
license:             BSD3
license-file:        LICENSE
author:              Moisés Ackerman, Carlos Spaggiari
maintainer:          moises+epilog@ackerman.space, carlos.25896@gmail.com 
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable Epilog
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  ghc-options:
    -Wall

  -- other-modules:
  -- other-extensions:
  build-depends:
    base  >=4.8 && <4.9,
    array >=0.5 && <0.6

  build-tools: alex,happy
