name:                Epilog
version:             0.1.0.0
synopsis:            Epilog programming language compiler
description:         Epilog is a general purpose programming language
    developed for the elective courses on Programming Languages at Universidad
    Simón Bolívar. It is inspired, in part, by the syntax of programming
    languages Prolog and Erlang.
homepage:            github.com/adgalad/Epilog
license:             BSD3
license-file:        LICENSE
author:              Moisés Ackerman, Carlos Spaggiari
maintainer:          moises+epilog@ackerman.space, carlos.25896@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

executable Epilog
    hs-source-dirs:
    main-is:           Language/Epilog/Main.hs
    default-language:  Haskell2010

    ghc-options:
        -Wall

    other-modules:
        Language.Epilog.Lexer, Language.Epilog.Parser

    -- other-extensions:
    build-depends:
          array          >= 0.5  && < 0.6
        , base           >= 4.8  && < 4.9
        , containers     >= 0.5  && < 0.6
        , lens           >= 4.14 && < 4.15
        , mtl            >= 2.2  && < 2.3
        , numeric-limits >= 0.1  && < 0.2
        , transformers   >= 0.4  && < 0.5

    build-tools: alex, happy
